# agent-game-lab

./: .env.example  .gitignore  CLAUDE.md  README.md  design.md  instructions.md  integration_plan.md  main.py  pyproject.toml  requirements.md  summary.md
.claude/: settings.local.json
apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_secondary_categorization.py
apps/advisor/: apps.py  urls.py  views.py
apps/analytics/: urls.py  views.py
apps/budgets/: admin.py  apps.py  forms.py  models.py  signals.py  spending_analysis.py  urls.py  views.py
apps/budgets/migrations/: 0001_initial.py  0002_initial.py  0003_secondary_categorization.py  0004_populate_category_defaults.py
apps/categorization/: admin.py  apps.py  models.py
apps/categorization/migrations/: 0001_initial.py
apps/categorization/services/: base.py  llm_categorizer.py
apps/statements/: admin.py  forms.py  models.py  urls.py  views.py
apps/statements/migrations/: 0001_initial.py
apps/statements/services/: __init__.py  parser.py
apps/transactions/: admin.py  models.py  urls.py  views.py
apps/transactions/migrations/: 0001_initial.py  0002_transaction_user_confirmed.py  0003_secondary_categorization.py
config/: settings.py  urls.py  wsgi.py
configs/: experiment.yaml
configs/agents/: crewai_base.yaml  llm_default.yaml  policies.yaml
configs/agents/crewai/: agents.yaml
configs/prompts/: pd_round.md  pd_system.md
configs/prompts/personas/: cooperative.md  exploitative.md  generous_tft.md  tit_for_tat.md  (+2 more)
docs/: architecture.md  phase1_spec.md
meetings/: 2026-02-07_session.md
src/pdbench/: __init__.py  cli.py
static/css/: main.css
static/js/: main.js
templates/: base.html
templates/accounts/: profile.html
templates/advisor/: insights.html
templates/analytics/: dashboard.html
templates/budgets/: alerts.html  category_form.html  manage.html
templates/statements/: history.html  upload.html
templates/transactions/: detail.html  list.html
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_cli_smoke.py
tests/integration/: __init__.py  test_logging_schema.py  test_runner_with_mock.py
tests/unit/: __init__.py  test_crewai_agent.py  test_horizon.py  test_metrics.py  test_parsing.py  test_payoff.py  test_policy_agents.py  test_transcript_window.py
(+80 files in other folders)
