[project]
name = "bamboo-money"
version = "0.1.0"
description = "Personal finance management application with AI-powered insights"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Django core
    "django>=3.2",
    "django-allauth>=0.61.0",
    "python-dotenv>=1.0.0",
    # Database
    "psycopg2-binary>=2.9.9",
    "dj-database-url>=2.1.0",
    # PDF Processing
    "pdfplumber>=0.10.3",
    "pypdf2>=3.0.0",
    "pytesseract>=0.3.10",
    "pillow>=10.2.0",
    # AI/ML
    "openai>=1.12.0",
    "crewai>=0.28.0",
    # Background tasks
    "django-q2>=1.6.0",
    # Frontend
    "django-htmx>=1.17.2",
    "whitenoise>=6.6.0",
    # Utilities
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.7.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "hypothesis>=6.98.0",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
